syntax = "proto2";

package magnolify.protobuf;

option java_package = "magnolify.protobuf";

message IntegersP2 {
    required int32 i = 1;
    required int64 l = 2;
}

message FloatsP2 {
    required float f = 1;
    required double d = 2;
}

message RequiredP2 {
    required bool b = 1;
    required string s = 2;
    required int32 i = 3;
}

message NullableP2 {
    optional bool b = 1;
    optional string s = 2;
    optional int32 i = 3;
}

message RepeatedP2 {
    repeated bool b = 1;
    repeated string s = 2;
    repeated int32 i = 3;
}

message NestedP2 {
    required bool b = 1;
    required string s = 2;
    required int32 i = 3;
    required RequiredP2 r = 4;
    optional RequiredP2 o = 5;
    repeated RequiredP2 l = 6;
}

message CollectionsP2 {
    repeated int32 a = 1;
    repeated int32 l = 2;
    repeated int32 v = 3;
    repeated int32 s = 4;
}

message MoreCollectionsP2 {
    repeated int32 i = 1;
    repeated int32 s = 2;
    repeated int32 is = 3;
}

message MapsP2 {
  map<string, int32> mp = 1;
  map<string, NestedP2> mn = 2;
}

message EnumsP2 {
    enum JavaEnums {
        RED = 0;
        GREEN = 1;
        BLUE = 2;
    }
    enum ScalaEnums {
        Red = 0;
        Green = 1;
        Blue = 2;
    }
    required JavaEnums j = 1;
    required ScalaEnums s = 2; // Enumeration
    required ScalaEnums a = 3; // ADT
    optional JavaEnums jo = 4;
    optional ScalaEnums so = 5; // Enumeration
    optional ScalaEnums ao = 6; // ADT
    repeated JavaEnums jr = 7;
    repeated ScalaEnums sr = 8; // Enumeration
    repeated ScalaEnums ar = 9; // ADT
}

message UnsafeEnumsP2 {
    required string j = 1;
    required string s = 2;
    required string a = 3;
    optional string jo = 4;
    optional string so = 5;
    optional string ao = 6;
    repeated string jr = 7;
    repeated string sr = 8;
    repeated string ar = 9;
}

message CustomP2 {
    required string u = 1;
    required int64 d = 2;
}

message BytesP2 {
    required bytes b = 1;
}

message DefaultRequiredP2 {
    required int32 i = 1 [default = 123];
    required int64 l = 2 [default = 456];
    required float f = 3 [default = 1.23];
    required double d = 4 [default = 4.56];
    required bool b = 5 [default = true];
    required string s = 6 [default = "abc"];
    required bytes bs = 7 [default = "def"];
    required EnumsP2.JavaEnums je = 8 [default = GREEN];
    required EnumsP2.ScalaEnums se = 9 [default = Green]; // Enumeration
    required EnumsP2.ScalaEnums ae = 10 [default = Green]; // ADT
}

message DefaultNullableP2 {
    optional int32 i = 1 [default = 123];
    optional int64 l = 2 [default = 456];
    optional float f = 3 [default = 1.23];
    optional double d = 4 [default = 4.56];
    optional bool b = 5 [default = true];
    optional string s = 6 [default = "abc"];
    optional bytes bs = 7 [default = "def"];
    optional EnumsP2.JavaEnums je = 8 [default = GREEN];
    optional EnumsP2.ScalaEnums se = 9 [default = Green]; // Enumeration
    optional EnumsP2.ScalaEnums ae = 10 [default = Green]; // ADT
}
