syntax = "proto3";

package magnolify.protobuf;

option java_package = "magnolify.protobuf";

message IntegersP3 {
    int32 i = 1;
    int64 l = 2;
}

message FloatsP3 {
    float f = 1;
    double d = 2;
}

message RequiredP3 {
    bool b = 1;
    string s = 2;
    int32 i = 3;
}

message NullableP3 {
    optional bool b = 1;
    optional string s = 2;
    optional int32 i = 3;
}

message RepeatedP3 {
    repeated bool b = 1;
    repeated string s = 2;
    repeated int32 i = 3;
}

message NestedP3 {
    bool b = 1;
    string s = 2;
    int32 i = 3;
    RequiredP3 r = 4;
    optional RequiredP3 o = 5;
    repeated RequiredP3 l = 6;
}

message CollectionsP3 {
    repeated int32 a = 1;
    repeated int32 l = 2;
    repeated int32 v = 3;
    repeated int32 s = 4;
}

message MoreCollectionsP3 {
    repeated int32 i = 1;
    repeated int32 s = 2;
    repeated int32 is = 3;
}

message MapsP3 {
  map<string, int32> mp = 1;
  map<string, NestedP3> mn = 2;
}

message EnumsP3 {
    enum JavaEnums {
        RED = 0;
        GREEN = 1;
        BLUE = 2;
    }
    enum ScalaEnums {
        Red = 0;
        Green = 1;
        Blue = 2;
    }
    JavaEnums j = 1;
    ScalaEnums s = 2; // Enumeration
    ScalaEnums a = 3; // ADT
    optional JavaEnums jo = 4;
    optional ScalaEnums so = 5; // Enumeration
    optional ScalaEnums ao = 6; // ADT
    repeated JavaEnums jr = 7;
    repeated ScalaEnums sr = 8; // Enumeration
    repeated ScalaEnums ar = 9; // ADT
}

message UnsafeEnumsP3 {
    string j = 1;
    string s = 2;
    string a = 3;
    optional string jo = 4;
    optional string so = 5;
    optional string ao = 6;
    repeated string jr = 7;
    repeated string sr = 8;
    repeated string ar = 9;
}

message CustomP3 {
    string u = 1;
    int64 d = 2;
}

message BytesP3 {
    bytes b = 1;
}

message UpperCaseP3 {
    string FIRSTFIELD = 1;
    string SECONDFIELD = 2;
    UpperCaseInnerP3 INNERFIELD = 3;
}

message UpperCaseInnerP3 {
    string INNERFIRST = 1;
}
